--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "devDependencies": {
         "autoprefixer": "^10.4.13",
         "axios": "^0.21",
+        "browser-sync": "^2.27.11",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.19",
+        "postcss": "^8.4.21",
         "tailwindcss": "^3.2.4"
     }
 }
